Added link to the MPI-SWS blockchain research group

--- a/index.html
+++ b/index.html
@@ -176,11 +176,17 @@
 					<div class="resume-section-content">
 						<p class="mb-0">I am a research assistant at the <a href="https://www.mpi-sws.org/">Max Planck
 								Institute for Software Systems (MPI-SWS)</a> in the <a
-								href="http://socialnetworks.mpi-sws.org">Social Computing Research</a>
-							group and a Ph.D. student at the <a href="https://www.uni-saarland.de/en/">Universität des
+								href="http://socialnetworks.mpi-sws.org">Blockchain Research</a>
+							group and a Ph.D. Candidate at MPI-SWS and the <a
+								href="https://www.uni-saarland.de/en/">Universität des
 								Saarlandes (UdS)</a>. I am advised by <a href="http://www.mpi-sws.org/~gummadi/">Dr.
 								Krishna P. Gummadi</a> and my Ph.D. research focuses on fairness concerns on
-							proof-of-work blockchains and on Decentralized Finance (DeFi). In 2022, I did a 6-month
+							proof-of-work blockchains and on Decentralized Finance (DeFi). My advisor and I started
+							the <a href="https://blockchain.mpi-sws.org">MPI-SWS Blockchain Research</a> group in August
+							2018. Our group has collaborators from <a href="https://www.inria.fr/en">Inria</a>, <a
+								href="https://www.northeastern.edu">Northeastern University</a>, and <a
+								href="https://www.vu.nl/en/index.aspx">Vrije Universiteit Amsterdam</a>. In 2022, I did
+							a 6-month
 							research internship at
 							<a href="https://chainlinklabs.com">Chainlink Labs</a>.
 							In 2017, I completed my Master's
