--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 					<div class="media-body p-4 d-flex flex-column flex-md-row mx-auto mx-lg-0">
 						<div class="primary-info">
 							<h1 class="name mt-0 mb-1 text-white text-uppercase text-uppercase">Johnnatan Messias</h1>
-							<div class="title mb-2">Research Assistant at MPI-SWS</div>
+							<div class="title mb-2">Ph.D. Candidate at MPI-SWS</div>
 							<ul class="list-unstyled">
 								<li class="mb-2"><a href="#"><i class="far fa-envelope fa-fw mr-2"
 											data-fa-transform="grow-3"></i>johnme [AT] mpi-sws [DOT] org</a></li>
@@ -174,10 +174,10 @@
 				<section class="resume-section summary-section mb-5">
 					<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">About me</h2>
 					<div class="resume-section-content">
-						<p class="mb-0">I am a research assistant at the <a href="https://www.mpi-sws.org/">Max Planck
+						<p class="mb-0">I am a Ph.D. Candidate and a research assistant at the <a href="https://www.mpi-sws.org/">Max Planck
 								Institute for Software Systems (MPI-SWS)</a> in the <a
 								href="http://socialnetworks.mpi-sws.org">Blockchain Research</a>
-							group and a Ph.D. Candidate at MPI-SWS and the <a
+							group and the <a
 								href="https://www.uni-saarland.de/en/">Universität des
 								Saarlandes (UdS)</a>. I am advised by <a href="http://www.mpi-sws.org/~gummadi/">Dr.
 								Krishna P. Gummadi</a> and my Ph.D. research focuses on fairness concerns on
