Updated my website URL

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 	<script>
 		var names = {
-			"johnnatan_messias": ["<strong>Johnnatan Messias</strong>", "http://johnnatan.me"],
+			"johnnatan_messias": ["<strong>Johnnatan Messias</strong>", "http://johnnatan-messias.github.io"],
 			"fabricio_benevenuto": ["Fabrício Benevenuto", "http://homepages.dcc.ufmg.br/~fabricio"],
 			"mirella_moro": ["Mirella M. Moro", "http://homepages.dcc.ufmg.br/~mirella"],
 			"ricardo_rabelo": ["Ricardo Rabelo", "http://www.decom.ufop.br/imobilis/"],
