Added slides of the fc23 paper

--- a/index.html
+++ b/index.html
@@ -174,11 +174,11 @@
 				<section class="resume-section summary-section mb-5">
 					<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">About me</h2>
 					<div class="resume-section-content">
-						<p class="mb-0">I am a Ph.D. Candidate and a research assistant at the <a href="https://www.mpi-sws.org/">Max Planck
+						<p class="mb-0">I am a Ph.D. Candidate and a research assistant at the <a
+								href="https://www.mpi-sws.org/">Max Planck
 								Institute for Software Systems (MPI-SWS)</a> in the <a
 								href="http://socialnetworks.mpi-sws.org">Blockchain Research</a>
-							group and the <a
-								href="https://www.uni-saarland.de/en/">Universität des
+							group and the <a href="https://www.uni-saarland.de/en/">Universität des
 								Saarlandes (UdS)</a>. I am advised by <a href="http://www.mpi-sws.org/~gummadi/">Dr.
 								Krishna P. Gummadi</a> and my Ph.D. research focuses on fairness concerns on
 							proof-of-work blockchains and on Decentralized Finance (DeFi). My advisor and I started
@@ -266,6 +266,11 @@
 														href="https://github.com/johnnatan-messias/blockchain-transaction-ordering/"
 														target="_blank">
 														<span class="badge badge-warning badge-pill">Data</span>
+													</a></li>
+												<li class="list-inline-item"><a
+														href="pdf/messias-tx-prioritization-fc23-slides.pdf"
+														target="_blank">
+														<span class="badge badge-warning badge-pill">Slides</span>
 													</a></li>
 											</ul>
 
