Added master and bachelor thesis

--- a/index.html
+++ b/index.html
@@ -1739,6 +1739,138 @@
 										</ul>
 									</article>
 
+
+									<article class="resume position-relative mb-5">
+
+										<div class="resume-timeline-item-header mb-2">
+											<div class="d-flex flex-column flex-md-row">
+												<h4 class="resume-timeline-item-header font-weight-bold mb-1">
+													Thesis and technical reports
+												</h4>
+											</div>
+											<!--//row-->
+										</div>
+										<!--//resume-timeline-item-->
+
+										<ul class="list-inline">
+											<li>
+												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
+													Characterizing Interconnections And Linguistic Patterns In Twitter
+												</h6>
+											<li>
+												<script>document.write(get_authors(["johnnatan_messias", "fabricio_benevenuto"]))</script>
+											</li>
+											<li>Master Thesis. Computer Science Department. Universidade Federal de
+												Minas Gerais (UFMG). 2017.</li>
+
+											<ul class="list-inline">
+												<li class="list-inline-item"><a href="#master-thesis"
+														data-toggle="collapse">
+														<span class="badge badge-dark badge-pill">Abstract</span></a>
+												</li>
+												<li class="list-inline-item"><a
+														href="./pdf/master-thesis_johnnatan_messias.pdf" target="_blank">
+														<span class="badge badge-danger badge-pill">PDF</span></a>
+												</li>
+												<li class="list-inline-item"><a
+													href="pdf/master-thesis_johnnatan_messias_talk-17.pdf"
+													target="_blank">
+													<span class="badge badge-warning badge-pill">Slides</span>
+												</a></li>
+											</ul>
+											</li>
+											<div id="master-thesis" class="collapse">
+												<p class="font-italic"><b>Abstract:</b> Social media is considered a
+													democratic space in which people connect and interact with each
+													other regardless of their gender, race, or any other demographic
+													aspect. Despite numerous efforts that explore demographic aspects in
+													social media, it is still unclear whether social media perpetuates
+													old inequalities from the offline world. In this dissertation, we
+													attempt to identify gender and race of Twitter users located in the
+													United States using advanced image processing algorithms from
+													Face++. We investigate how different demographic groups (i.e.
+													male/female, asian/black/white) connect with each other and
+													differentiate them regarding linguistic styles and also their
+													interests. We quantify to what extent one group follows and
+													interacts with each other and the extent to which these connections
+													and interactions reflect in inequalities in Twitter. We also extract
+													linguistic features from six categories (affective attributes,
+													cognitive attributes, lexical density and awareness, temporal
+													references, social and personal concerns, and interpersonal focus)
+													in order to identify the similarities and the differences in the
+													messages they share in Twitter. Furthermore, we extract the absolute
+													ranking difference of top phrases between demographic groups. As a
+													dimension of diversity, we also use the topics of interest that we
+													retrieve from each user. Our analysis shows that users identified as
+													white and male tend to attain higher positions, in terms of the
+													number of followers and number of times in another user's lists, in
+													Twitter. There are clear differences in the way of writing across
+													different demographic groups in both gender and race domains as well
+													as in the topic of interest. We hope our effort can stimulate the
+													development of new theories of demographic information in the online
+													space. Finally, we developed a Web-based system that leverages the
+													demographic aspects of users to provide transparency to the Twitter
+													trending topics system.
+												</p>
+											</div>
+										</ul>
+
+										<ul class="list-inline">
+											<li>
+												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
+													Framework para Sistemas de Navegação de Veículos Aéreos não
+													Tripulados</h6>
+											<li>
+												<script>document.write(get_authors(["johnnatan_messias", ""]))</script>
+											</li>
+											<li>Bachelor Thesis. Computer Science Department. Universidade Federal de
+												Ouro Preto (UFOP). 2014.</li>
+
+											<ul class="list-inline">
+												<li class="list-inline-item"><a href="#bachelor-thesis"
+														data-toggle="collapse">
+														<span class="badge badge-dark badge-pill">Abstract</span></a>
+												</li>
+												<li class="list-inline-item"><a href="./pdf/mono_johnnatan_messias-15.pdf"
+														target="_blank">
+														<span class="badge badge-danger badge-pill">PDF</span></a>
+												</li>
+											</ul>
+											</li>
+											<div id="bachelor-thesis" class="collapse">
+												<p class="font-italic"><b>Abstract:</b> Autonomous unmanned
+													flights undoubtedly enable new opportunities for scientific
+													development. The drones can be used in military services, for
+													example, in combat or as well as for rescue missions, aerial survey,
+													supervision and inspection of a territory, attracting significant
+													attention from media outlets such as, for example, television
+													stations, radio, newspapers and internet. The goal of this project
+													is whether it is possible to make viable autonomous flights at
+													AR.Drone 2.0 and the understanding of its operation. This will
+													require the implementation of a control program for autonomous
+													flights. This framework requires the acquisition of data during the
+													flight, which are obtained using sensors which use Arduino. The
+													Arduino communication with the drone is needed for the inclusion of
+													new sensors and the use of the AR.Drone is performed by the
+													framework Node.js. Each remote button has a specific command, and
+													may be in order for the user to create own missions or even perform
+													some missions previously implemented by the developer. All tests
+													were run on the AR.Drone 2.0, using the Node.js framework, sensors
+													and a remote control. Through the experiments and presented studies
+													became possible to achieve the proposed objective, making possible
+													the implementation of autonomous flights in drone. As a result, for
+													the realization of autonomous flight we designed a framework where
+													the user can create autonomous flight missions for the drone run
+													them. These commands are sent to the drone by the user due to use of
+													a remote control. This remote control sends data to a sensor
+													connected to the Arduino that processes the data and then is read
+													and interpreted by the drone.
+												</p>
+											</div>
+										</ul>
+
+									</article>
+
 								</div>
 								<!--//resume-timeline-->
 
