--- a/index.html
+++ b/index.html
@@ -1769,14 +1769,15 @@
 														<span class="badge badge-dark badge-pill">Abstract</span></a>
 												</li>
 												<li class="list-inline-item"><a
-														href="./pdf/master-thesis_johnnatan_messias.pdf" target="_blank">
+														href="./pdf/master-thesis_johnnatan_messias.pdf"
+														target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
 												<li class="list-inline-item"><a
-													href="pdf/master-thesis_johnnatan_messias_talk-17.pdf"
-													target="_blank">
-													<span class="badge badge-warning badge-pill">Slides</span>
-												</a></li>
+														href="pdf/master-thesis_johnnatan_messias_talk-17.pdf"
+														target="_blank">
+														<span class="badge badge-warning badge-pill">Slides</span>
+													</a></li>
 											</ul>
 											</li>
 											<div id="master-thesis" class="collapse">
@@ -1831,8 +1832,8 @@
 														data-toggle="collapse">
 														<span class="badge badge-dark badge-pill">Abstract</span></a>
 												</li>
-												<li class="list-inline-item"><a href="./pdf/mono_johnnatan_messias-15.pdf"
-														target="_blank">
+												<li class="list-inline-item"><a
+														href="./pdf/mono_johnnatan_messias-15.pdf" target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
 											</ul>
@@ -2068,12 +2069,13 @@
 									program Science Without Borders
 									in Budapest - Hungary - Câmara de Mariana/MG Brazil - (November/2014)</li>
 
-								<li>Best paper nominee: CTIC’13, BraSNAM’12</li>
+								<li>Best paper nominee: CTIC '13, BraSNAM’12</li>
 
 
-								<li>3rd place in the XXXII Concurso de Trabalhos de Iniciação Científica (CTIC2013),
+								<li>Ranked 3rd in the Brazilian Young Research Scientist Competition (XXXII Concurso de
+									Trabalhos de Iniciação Científica - CTIC 2013),
 									XXXIII Congresso da Sociedade
-									Brasileira de Computação (CSBC2013)</li>
+									Brasileira de Computação (CSBC 2013)</li>
 
 								<li>Honorable Mention Article Sigam-me os Bons! Transformando robôs em pessoas
 									influentes no Twitter, Brazilian
@@ -2086,6 +2088,11 @@
 							<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Talks
 							</h2>
 							<ul>
+								<li>(2023) <a href="https://fc23.ifca.ai/program.html">Dissecting Bitcoin and
+										Ethereum Transactions: On the Lack of Transaction Contention and Prioritization
+										Transparency in Blockchains</a>.Financial Cryptography and Data Security (FC
+									2023). Bol, Brač, Croatia.
+								</li>
 								<li>(2021) <a href="https://www.youtube.com/watch?v=B2tTLte9LGo">Selfish & Opaque
 										Transaction Ordering in the Bitcoin Blockchain: The
 										Case for Chain Neutrality</a>. ACM SIGCOMM Internet Measurement Conference (IMC
