Fixed link to the Eleições sem Fake project

--- a/index.html
+++ b/index.html
@@ -2003,7 +2003,7 @@
 								</li>
 
 								<li>
-									<a href="https://www.eleicoessemfake.dcc.ufmg.br/" target="_blank">
+									<a href="https://www.eleicoes-sem-fake.dcc.ufmg.br" target="_blank">
 										<strong>Eleições sem Fake:</strong>
 									</a> Many systems to help with the Fake news problem.
 								</li>
