Updated description og the Eleições sem Fake project

--- a/index.html
+++ b/index.html
@@ -2005,7 +2005,8 @@
 								<li>
 									<a href="https://www.eleicoes-sem-fake.dcc.ufmg.br" target="_blank">
 										<strong>Eleições sem Fake:</strong>
-									</a> Many systems to help with the Fake news problem.
+									</a> Multiple systems to help with the Fake News problem. These systems were the key
+									to investigating misinformation dissemination within public WhatsApp groups.
 								</li>
 
 								<li>
