--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="Johnnatan Messias">
 	<meta name="description"
-		content="I am a Ph.D. student at the Max Planck Institute for Software Systems (MPI-SWS) in the Social Computing Research group. I am advised by Dr. Krishna P. Gummadi and my Ph.D. research focuses on fairness concerns on proof-of-work blockchains and on Decentralized Finance (DeFi). I completed my Master's degree in Computer Science at the Universidade Federal de Minas Gerais (UFMG) with Dr. Fabrício Benevenuto as my advisor. During my MSc, I also held two research intern positions at MPI-SWS in Saarbrücken, Germany. I studied Computer Science at Eötvös Loránd University (ELTE) in Budapest, Hungary, in 2013/2014 during my exchange program (Science Without Borders - CAPES). I completed my undergraduate degree in Computer Science at the Universidade Federal de Ouro Preto (UFOP) in 2015.">
+	content="I am a Ph.D. Candidate and a research assistant at the Max Planck Institute for Software Systems (MPI-SWS) in the Blockchain Research group and the Universität des Saarlandes (UdS). I am advised by Dr. Krishna P. Gummadi and my Ph.D. research focuses on fairness concerns on proof-of-work blockchains and on Decentralized Finance (DeFi). My advisor and I started the MPI-SWS Blockchain Research group in August 2018. Our group has collaborators from Inria, Northeastern University, and Vrije Universiteit Amsterdam. In 2022, I did a 6-month research internship at Chainlink Labs. In 2017, I completed my Master's degree in Computer Science at the Universidade Federal de Minas Gerais (UFMG), Brazil, with Dr. Fabrício Benevenuto as my advisor. During my MSc, I also held two research intern positions at MPI-SWS in Saarbrücken, Germany. I studied Computer Science at Eötvös Loránd University (ELTE) in Budapest, Hungary, in 2013/2014 during my exchange program (Science Without Borders - CAPES). I completed my undergraduate degree in Computer Science at the Universidade Federal de Ouro Preto (UFOP), Brazil, in 2015.">
 	<meta property="og:image" content="https://johnnatan-messias.github.io/assets/images/profile.jpg">
 	<meta property="og:image:type" content="image/jpeg">
 	<meta property="og:image:width" content="652">
@@ -133,7 +133,7 @@
 					<div class="media-body p-4 d-flex flex-column flex-md-row mx-auto mx-lg-0">
 						<div class="primary-info">
 							<h1 class="name mt-0 mb-1 text-white text-uppercase text-uppercase">Johnnatan Messias</h1>
-							<div class="title mb-2">Ph.D. Candidate at MPI-SWS</div>
+							<div class="title mb-2">Research Scientist at Matter Labs</div>
 							<ul class="list-unstyled">
 								<li class="mb-2"><a href="#"><i class="far fa-envelope fa-fw mr-2"
 											data-fa-transform="grow-3"></i>johnme [AT] mpi-sws [DOT] org</a></li>
