--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="Johnnatan Messias">
 	<meta name="description"
-	content="I am a Ph.D. Candidate and a research assistant at the Max Planck Institute for Software Systems (MPI-SWS) in the Blockchain Research group and the Universität des Saarlandes (UdS). I am advised by Dr. Krishna P. Gummadi and my Ph.D. research focuses on fairness concerns on proof-of-work blockchains and on Decentralized Finance (DeFi). My advisor and I started the MPI-SWS Blockchain Research group in August 2018. Our group has collaborators from Inria, Northeastern University, and Vrije Universiteit Amsterdam. In 2022, I did a 6-month research internship at Chainlink Labs. In 2017, I completed my Master's degree in Computer Science at the Universidade Federal de Minas Gerais (UFMG), Brazil, with Dr. Fabrício Benevenuto as my advisor. During my MSc, I also held two research intern positions at MPI-SWS in Saarbrücken, Germany. I studied Computer Science at Eötvös Loránd University (ELTE) in Budapest, Hungary, in 2013/2014 during my exchange program (Science Without Borders - CAPES). I completed my undergraduate degree in Computer Science at the Universidade Federal de Ouro Preto (UFOP), Brazil, in 2015.">
+		content="I am a Research Scientist at Matter Labs and a Ph.D. Candidate at the Max Planck Institute for Software Systems (MPI-SWS) and at the Universität des Saarlandes (UdS). My research focuses on fairness concerns on proof-of-work blockchains and on Decentralized Finance (DeFi). In 2022, I did a 6-month research internship at Chainlink Labs.">
 	<meta property="og:image" content="https://johnnatan-messias.github.io/assets/images/profile.jpg">
 	<meta property="og:image:type" content="image/jpeg">
 	<meta property="og:image:width" content="652">
@@ -174,7 +174,7 @@
 				<section class="resume-section summary-section mb-5">
 					<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">About me</h2>
 					<div class="resume-section-content">
-						<p class="mb-0">I am a Ph.D. Candidate and a research assistant at the <a
+						<p class="mb-0">I am a Research Scientist and a Ph.D. Candidate at the <a
 								href="https://www.mpi-sws.org/">Max Planck
 								Institute for Software Systems (MPI-SWS)</a> in the <a
 								href="http://socialnetworks.mpi-sws.org">Blockchain Research</a>
@@ -240,7 +240,8 @@
 										<ul class="list-inline">
 											<li>
 												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
-													Understanding Blockchain Governance: Analyzing Decentralized Voting to Amend DeFi Smart Contracts</h6>
+													Understanding Blockchain Governance: Analyzing Decentralized Voting
+													to Amend DeFi Smart Contracts</h6>
 											</li>
 											<li>
 												<script>document.write(get_authors(["johnnatan_messias", "vabuk_pahari", "balakrishnan_chandrasekaran", "krishna_gummadi", "patrick_loiseau"]))</script>
@@ -254,8 +255,7 @@
 														<span class="badge badge-dark badge-pill">Abstract</span></a>
 												</li>
 												<li class="list-inline-item"><a
-														href="https://arxiv.org/pdf/2305.17655.pdf"
-														target="_blank">
+														href="https://arxiv.org/pdf/2305.17655.pdf" target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
 											</ul>
