--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 				<section class="resume-section summary-section mb-5">
 					<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">About me</h2>
 					<div class="resume-section-content">
-						<p class="mb-0">I am a Research Scientist and a Ph.D. Candidate at the <a
+						<p class="mb-0">I am a Research Scientist at <a href="http://matter-labs.io">Matter Labs</a> and a Ph.D. Candidate at the <a
 								href="https://www.mpi-sws.org/">Max Planck
 								Institute for Software Systems (MPI-SWS)</a> in the <a
 								href="http://socialnetworks.mpi-sws.org">Blockchain Research</a>
