Updated thumbnail description

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="Johnnatan Messias">
 	<meta name="description"
-		content="I am a Research Scientist at Matter Labs and a Ph.D. Candidate at the Max Planck Institute for Software Systems (MPI-SWS) and at the Universität des Saarlandes (UdS). My research focuses on fairness concerns on proof-of-work blockchains and on Decentralized Finance (DeFi). In 2022, I did a 6-month research internship at Chainlink Labs.">
+		content="I am Research Scientist at Matter Labs and a Ph.D. candidate at the Max Planck Institute for Software Systems (MPI-SWS). My research focuses on fairness concerns on blockchains and on Decentralized Finance (DeFi). In 2022, I completed a six-month research internship at Chainlink Labs.">
 	<meta property="og:image" content="https://johnnatan-messias.github.io/assets/images/profile.jpg">
 	<meta property="og:image:type" content="image/jpeg">
 	<meta property="og:image:width" content="652">
@@ -174,8 +174,8 @@
 				<section class="resume-section summary-section mb-5">
 					<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">About me</h2>
 					<div class="resume-section-content">
-						<p class="mb-0">I am a Research Scientist at <a href="http://matter-labs.io">Matter Labs</a> and a Ph.D. Candidate at the <a
-								href="https://www.mpi-sws.org/">Max Planck
+						<p class="mb-0">I am a Research Scientist at <a href="http://matter-labs.io">Matter Labs</a> and
+							a Ph.D. Candidate at the <a href="https://www.mpi-sws.org/">Max Planck
 								Institute for Software Systems (MPI-SWS)</a> in the <a
 								href="http://socialnetworks.mpi-sws.org">Blockchain Research</a>
 							group and the <a href="https://www.uni-saarland.de/en/">Universität des
