--- a/index.html
+++ b/index.html
@@ -2116,11 +2116,23 @@
 							<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Awards
 							</h2>
 							<ul>
-								<li>Granted a scholarship in 2013 from the Brazilian Scientific Exchange Program (<a
-										href="http://capes.gov.br/images/stories/download/diversos/folder-SWB.pdf">Science
-										without Borders -
-										CAPES</a>) for Academic Excellence to study in a European University for
-									fourteen months.</li>
+								<li>My seminar on Blockchains and Decentralized Finance (DeFi) has been nominated for
+									the “Busy Beaver” award – an award for outstanding and excellent lectures at the
+									Saarland University.</li>
+								<li>CISPA Summer School on Trustworthy Artificial Intelligence 2022: Part of the approx.
+									100 students selected worldwide.</li>
+								<li>The Swiss Blockchain Winter School 2019: Received a stipend award provided to
+									selected students to participate in the event.</li>
+								<li>Our Kunumi’s medical auditor project was awarded as Brazil’s most innovative health
+									software in 2019 according to IT Forum 365, promoted by PwC and ITMidia.</li>
+								<li>Granted a scholarship in 2013 for academic excellence to study in a European
+									university for 14 months.</li>
+								<li>Research Grant during my M.Sc. by the Brazilian National Council for Scientific and
+									Technological Development (CNPq) and by the Coordination for the Improvement of
+									Higher Education Personnel CAPES).</li>
+								<li>Research Grant during my B.Sc. by the Brazilian National Council for Scientific and
+									Technological Development (CNPq).</li>
+
 
 								<li>Motion of applauses for developing the SmartHome project, during the exchange
 									program Science Without Borders
