--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="Johnnatan Messias">
 	<meta name="description"
-		content="I am Research Scientist at Matter Labs and a Ph.D. candidate at the Max Planck Institute for Software Systems (MPI-SWS). My research focuses on fairness concerns on blockchains and on Decentralized Finance (DeFi). In 2022, I completed a six-month research internship at Chainlink Labs.">
+		content="I am a Research Scientist at Matter Labs and a Ph.D. candidate at the Max Planck Institute for Software Systems (MPI-SWS). My research focuses on fairness concerns on blockchains and on Decentralized Finance (DeFi). In 2022, I completed a six-month research internship at Chainlink Labs.">
 	<meta property="og:image" content="https://johnnatan-messias.github.io/assets/images/profile.jpg">
 	<meta property="og:image:type" content="image/jpeg">
 	<meta property="og:image:width" content="652">
@@ -179,7 +179,7 @@
 								Institute for Software Systems (MPI-SWS)</a> in the <a
 								href="http://socialnetworks.mpi-sws.org">Blockchain Research</a>
 							group and the <a href="https://www.uni-saarland.de/en/">Universität des
-								Saarlandes (UdS)</a>. I am advised by <a href="http://www.mpi-sws.org/~gummadi/">Dr.
+								Saarlandes (UdS)</a>. In my PhD, I was advised by <a href="http://www.mpi-sws.org/~gummadi/">Dr.
 								Krishna P. Gummadi</a> and my Ph.D. research focuses on fairness concerns on
 							proof-of-work blockchains and on Decentralized Finance (DeFi). My advisor and I started
 							the <a href="https://blockchain.mpi-sws.org">MPI-SWS Blockchain Research</a> group in August
