Removed email from the frontpage

--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
 							<h1 class="name mt-0 mb-1 text-white text-uppercase text-uppercase">Johnnatan Messias</h1>
 							<div class="title mb-2">Research Scientist at Matter Labs</div>
 							<ul class="list-unstyled">
-								<li class="mb-2"><a href="#"><i class="far fa-envelope fa-fw mr-2"
-											data-fa-transform="grow-3"></i>johnme [AT] mpi-sws [DOT] org</a></li>
+								<!-- <li class="mb-2"><a href="#"><i class="far fa-envelope fa-fw mr-2"
+											data-fa-transform="grow-3"></i>johnme [AT] mpi-sws [DOT] org</a></li> -->
 								<li class="mb-2"><a href="pdf/resume_eng_johnnatan_messias.pdf"><i
 											class="far fa-file-pdf fa-fw mr-2" data-fa-transform="grow-3"></i>CV</a>
 								</li>
