Added paper on Airdrops

--- a/index.html
+++ b/index.html
@@ -87,21 +87,22 @@
 			"jisun_an": ["Jisun An", "http://jisun.me/"],
 			"gustavo_resende": ["Gustavo Resende", "#"],
 			"marcio_silva": ["Márcio Silva", "#"],
-			"jussara_almeida": ["Jussara Almeida", "http://www.dcc.ufmg.br/~jussara/"],
+			"jussara_almeida": ["Jussara Almeida", "http://www.dcc.ufmg.br/~jussara"],
 			"marisa_vasconcelos": ["Marisa Vasconcelos", "https://scholar.google.com.br/citations?user=e5IvuJgAAAAJ&hl=en"],
 			"koustuv_saha": ["Koustuv Saha", "http://koustuv.com/"],
-			"mahmoudreza_babaei": ["Mahmoudreza Babaei", "https://people.mpi-sws.org/~babaei/"],
-			"lucas_henrique": ["Lucas Henrique", "https://homepages.dcc.ufmg.br/~lhenriquecl/"],
-			"oana_goga": ["Oana Goga", "http://lig-membres.imag.fr/gogao/"],
-			"elissa_redmiles": ["Elissa M. Redmiles", "https://www.cs.umd.edu/~eredmiles/"],
+			"mahmoudreza_babaei": ["Mahmoudreza Babaei", "https://people.mpi-sws.org/~babaei"],
+			"lucas_henrique": ["Lucas Henrique", "https://homepages.dcc.ufmg.br/~lhenriquecl"],
+			"oana_goga": ["Oana Goga", "http://lig-membres.imag.fr/gogao"],
+			"elissa_redmiles": ["Elissa M. Redmiles", "https://www.cs.umd.edu/~eredmiles"],
 			"hugo_sousa": ["Hugo Sousa", "https://homepages.dcc.ufmg.br/~hugosousa/"],
-			"kiran_garimella": ["Kiran Garimella", "https://users.ics.aalto.fi/kiran/"],
-			"mohamed_alzayat": ["Mohamed Alzayat", "https://people.mpi-sws.org/~alzayat/"],
+			"kiran_garimella": ["Kiran Garimella", "https://users.ics.aalto.fi/kiran"],
+			"mohamed_alzayat": ["Mohamed Alzayat", "https://people.mpi-sws.org/~alzayat"],
 			"balakrishnan_chandrasekaran": ["Balakrishnan Chandrasekaran", "https://balakrishnanc.github.io"],
-			"patrick_loiseau": ["Patrick Loiseau", "http://lig-membres.imag.fr/loiseapa/"],
+			"patrick_loiseau": ["Patrick Loiseau", "http://lig-membres.imag.fr/loiseapa"],
 			"alan_mislove": ["Alan Mislove", "https://mislove.org"],
-			"vabuk_pahari": ["Vabuk Pahari", "https://vpahari.github.io"]
-
+			"vabuk_pahari": ["Vabuk Pahari", "https://vpahari.github.io"],
+			"aviv_yaish": ["Aviv Yaish", "https://www.avivyaish.com"],
+			"benjamin_livshits": ["Benjamin Livshits", "https://www.doc.ic.ac.uk/~livshits"],
 		};
 		function parse_author_to_html(author) {
 			return '<a href="' + author[1] + '" target="_blank">' + author[0] + '</a>';
@@ -179,7 +180,8 @@
 								Institute for Software Systems (MPI-SWS)</a> in the <a
 								href="http://socialnetworks.mpi-sws.org">Blockchain Research</a>
 							group and the <a href="https://www.uni-saarland.de/en/">Universität des
-								Saarlandes (UdS)</a>. In my PhD, I was advised by <a href="http://www.mpi-sws.org/~gummadi/">Dr.
+								Saarlandes (UdS)</a>. In my PhD, I was advised by <a
+								href="http://www.mpi-sws.org/~gummadi/">Dr.
 								Krishna P. Gummadi</a> and my Ph.D. research focuses on fairness concerns on
 							proof-of-work blockchains and on Decentralized Finance (DeFi). My advisor and I started
 							the <a href="https://blockchain.mpi-sws.org">MPI-SWS Blockchain Research</a> group in August
@@ -236,7 +238,57 @@
 
 									<article class="resume position-relative mb-5">
 										<!--//resume-timeline-item-header-->
+										<ul class="list-inline">
+											<li>
+												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
+													Airdrops: Giving Money Away Is Harder Than It Seems</h6>
+											</li>
+											<li>
+												<script>document.write(get_authors(["johnnatan_messias", "aviv_yaish", "benjamin_livshits"]))</script>
 
+											</li>
+											<li>Pre print.</li>
+
+											<ul class="list-inline">
+												<li class="list-inline-item"><a href="#arxiv-airdrop"
+														data-toggle="collapse">
+														<span class="badge badge-dark badge-pill">Abstract</span></a>
+												</li>
+												<li class="list-inline-item"><a
+														href="https://arxiv.org/pdf/2312.02752.pdf" target="_blank">
+														<span class="badge badge-danger badge-pill">PDF</span></a>
+												</li>
+												<li class="list-inline-item"><a
+														href="https://drive.google.com/drive/u/2/folders/1lm0UNtSLbnX0AtyRFh8Ol_6eDKYcnyl1"
+														target="_blank">
+														<span class="badge badge-warning badge-pill">Data</span>
+													</a></li>
+											</ul>
+
+											<div id="arxiv-airdrop" class="collapse">
+												<p class="font-italic"><b>Abstract:</b> Airdrops are used by blockchain
+													applications and platforms to attract an initial user base, and to
+													grow the user base over time. In the case of many airdrops, tokens
+													are distributed to select users as a "reward" for interacting with
+													the underlying platform, with a long-term goal of creating a loyal
+													community that will generate genuine economic activity well after
+													the airdrop has been completed. Although airdrops are widely used by
+													the blockchain industry, a proper understanding of the factors
+													contributing to an airdrop's success is generally lacking. In this
+													work, we outline the design space for airdrops, and specify a
+													reasonable list of outcomes that an airdrop should ideally result
+													in. We then analyze on-chain data from several larger-scale airdrops
+													to empirically evaluate the success of previous airdrops, with
+													respect to our desiderata. In our analysis, we demonstrate that
+													airdrop farmers frequently dispose of the lion's share of airdrops
+													proceeds via exchanges. Our analysis is followed by an overview of
+													common pitfalls that common airdrop designs lend themselves to,
+													which are then used to suggest concrete guidelines for better
+													airdrops.
+
+												</p>
+											</div>
+										</ul>
 										<ul class="list-inline">
 											<li>
 												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
