--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="Johnnatan Messias">
 	<meta name="description"
-		content="I am a Research Scientist at Matter Labs and a Ph.D. candidate at the Max Planck Institute for Software Systems (MPI-SWS). My research focuses on fairness concerns on blockchains and on Decentralized Finance (DeFi). In 2022, I completed a six-month research internship at Chainlink Labs.">
+		content="I'm Johnnatan, a Research Scientist at Matter Labs. I hold a Ph.D. from the Max Planck Institute for Software Systems (MPI-SWS), earned in collaboration with Saarland University. My research primarily revolves around addressing fairness issues in blockchain technology and within the realm of Decentralized Finance (DeFi).">
 	<meta property="og:image" content="https://johnnatan-messias.github.io/assets/images/profile.jpg">
 	<meta property="og:image:type" content="image/jpeg">
 	<meta property="og:image:width" content="652">
 	<meta property="og:image:height" content="653">
 	<meta name="keywords"
-		content="scientist, science, cientista, pesquisador, doutorado, phd, student, social media, blockchain, blockchains, germany, alemanha, brazil, brasil, computer science, ciência da computação, johnnatan messias, johnnatan afonso, johnnatan messias peixoto afonso, johnnatan messias p. afonso">
+		content="scientist, science, cientista, wissenschaftler, forscher, researcher, pesquisador, doutorado, phd, student, social media, blockchain, blockchains, germany, alemanha, brazil, brasil, computer science, ciência da computação, johnnatan messias, johnnatan afonso, johnnatan messias peixoto afonso, johnnatan messias p. afonso">
 	<meta name="google-site-verification" content="D1YxGMlR00iEhOLqhWg3pUbWsu7CkpXuxN6o7egxmoc" />
 	<!-- Google Font -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
