Updated bio description

--- a/index.html
+++ b/index.html
@@ -175,21 +175,17 @@
 				<section class="resume-section summary-section mb-5">
 					<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">About me</h2>
 					<div class="resume-section-content">
-						<p class="mb-0">I am a Research Scientist at <a href="http://matter-labs.io">Matter Labs</a> and
-							a Ph.D. Candidate at the <a href="https://www.mpi-sws.org/">Max Planck
-								Institute for Software Systems (MPI-SWS)</a> in the <a
-								href="http://socialnetworks.mpi-sws.org">Blockchain Research</a>
-							group and the <a href="https://www.uni-saarland.de/en/">Universität des
-								Saarlandes (UdS)</a>. In my PhD, I was advised by <a
-								href="http://www.mpi-sws.org/~gummadi/">Dr.
-								Krishna P. Gummadi</a> and my Ph.D. research focuses on fairness concerns on
-							proof-of-work blockchains and on Decentralized Finance (DeFi). My advisor and I started
-							the <a href="https://blockchain.mpi-sws.org">MPI-SWS Blockchain Research</a> group in August
-							2018. Our group has collaborators from <a href="https://www.inria.fr/en">Inria</a>, <a
-								href="https://www.northeastern.edu">Northeastern University</a>, and <a
-								href="https://www.vu.nl/en/index.aspx">Vrije Universiteit Amsterdam</a>. In 2022, I did
-							a 6-month
-							research internship at
+						<p class="mb-0">
+							I am a Research Scientist at <a href="http://matter-labs.io">Matter Labs</a>. I hold a Ph.D.
+							in Computer Science from the <a href="https://www.mpi-sws.org/">Max Planck Institute for
+								Software Systems
+								(MPI-SWS)</a>, earned in collaboration with <a
+								href="https://www.uni-saarland.de/en/">Universität des
+								Saarlandes (UdS)</a>, with <a
+								href="https://people.mpi-sws.org/~gummadi/">Dr.
+								Krishna P. Gummadi</a> as my advisor. My research primarily revolves around addressing fairness issues
+							in blockchain technology and within the realm of Decentralized Finance (DeFi).
+							In 2022, I did a 6-month research internship at
 							<a href="https://chainlinklabs.com">Chainlink Labs</a>.
 							In 2017, I completed my Master's
 							degree in Computer Science at the
